--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
           <ul class="nav-list-style">
             <li>
               {% if grand_total > 0 %}
-              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+              <a class="{% if grand_total %}font-weight-bold{% else %}{% endif %} nav-link bag-nav-link" href="{% url 'view_bag' %}">
                 <div class="text-center">
                   <div class="d-flex align-items-center">
                     <div class="mr-2">
