--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -13,22 +13,21 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class="col">
-            <hr>
-            <h3 class="logo-font mb-4 pt-2">Shopping Bag</h3>
+        <div class="col-12 text-center">
+            <h4 class="logo-font text-md mb-4 pt-3">Shopping Bag</h3>
             <hr>
         </div>
     </div>
 
     <div class="row">
-        <div class="col">
+        <div class="col-12 text-center">
             {% if bag_items %}
             <div class="table-responsive rounded">
-                <table class="table table-sm table-borderless mb-5">
-                    <thead class="text-black">
+                <table class="table table-sm table-borderless main-bag-table">
+                    <thead class="table-head-text">
                         <tr>
-                            <th scope="col">Product Info</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="hide-img"></th>
+                            <th scope="col" class="text-left pl-2">Name</th>
                             <th scope="col">Price</th>
                             <th scope="col">Qty</th>
                             <th scope="col">Subtotal</th>
@@ -36,13 +35,13 @@
                     </thead>
 
                     {% for item in bag_items %}
-                    <tr>
-                        <td class="p-3 w-25">
-                            <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                    <tr class="table-style">
+                        <td class="py-3 w-25 hide-img">
+                            <img class="img-fluid rounded pr-1" src="{{ item.product.image.url }}">
                         </td>
                         <td class="py-3">
-                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                            <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                            <p class="my-0 pl-1 text-left"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0 pl-1 sku-text text-left">SKU: {{ item.product.sku|upper }}</p>
                         </td>
                         <td class="py-3">
                             <p class="my-0">${{ item.product.price }}</p>
@@ -65,23 +64,23 @@
                     <tr>
                         <td colspan="5" class="text-right">
                             {% if request.META.HTTP_REFERER %}
-                            <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-outline-black rounded-0 btn-lg">
-                                <span class="icon">
+                            <a href="{{ request.META.HTTP_REFERER }}" class="rating-button btn rounded-2 text-uppercase">
+                                <span class="icon-pale pr-2">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             {% else %}
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                <span class="icon">
+                            <a href="{% url 'products' %}" class="rating-button btn rounded-2 text-uppercase">
+                                <span class="icon-pale pr-2">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             {% endif %}
-                            <a href="" class="btn btn-black rounded-0 btn-lg">
-                                <span class="text-uppercase">Secure Checkout</span>
-                                <span class="icon">
+                            <a href="" class="rating-button btn rounded-2 text-uppercase m-2">
+                                <span class="text-uppercase pl-3">Secure Checkout</span>
+                                <span class="icon-pale pl-2 pr-3">
                                     <i class="fas fa-lock"></i>
                                 </span>
                             </a>
@@ -93,16 +92,16 @@
             <!-- Return to previous page or default to all products if not available -->
             {% if request.META.HTTP_REFERER %}
             <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-outline-black rounded-0 btn-lg">
-                <span class="icon">
+            <a href="{{ request.META.HTTP_REFERER }}" class="rating-button btn rounded-2 text-uppercase">
+                <span class="icon-pale pr-2">
                     <i class="fas fa-chevron-left"></i>
                 </span>
                 <span class="text-uppercase">Keep Shopping</span>
             </a>
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                <span class="icon">
+            <a href="{% url 'products' %}" class="rating-button btn rounded-2 text-uppercase">
+                <span class="icon-pale pr-2">
                     <i class="fas fa-chevron-left"></i>
                 </span>
                 <span class="text-uppercase">Keep Shopping</span>
