--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -85,9 +85,35 @@
                                             <p class="mt-2"><strong>Quantity:</strong></p>
                                             <div class="form-group w-50">
                                                 <div class="input-group">
-                                                    <input class="form-control qty_input quantity-selector" type="number" name="quantity"
-                                                        value="1" min="1" max="99" data-item_id="{{ product.id }}"
-                                                        id="id_qty_{{ product.id }}">
+                                                    <div class="row justify-content-between">
+                                                        <div class="col-auto">
+
+                                                        <button
+                                                            class="increment-qty btn qty-button rounded-2"
+                                                            data-item_id="{{ product.id }}"
+                                                            id="increment-qty_{{ product.id }}">
+                                                            <span class="icon icon-pale">
+                                                                <i class="fas fa-plus"></i>
+                                                            </span>
+                                                        </button>
+
+
+                                                            <input class="form-control qty_input quantity-selector"
+                                                                type="number" name="quantity" value="1" min="1" max="99"
+                                                                data-item_id="{{ product.id }}"
+                                                                id="id_qty_{{ product.id }}">
+
+
+                                                            <button class="decrement-qty btn qty-button rounded-2"
+                                                                data-item_id="{{ product.id }}"
+                                                                id="decrement-qty_{{ product.id }}">
+                                                                <span class="icon icon-pale">
+                                                                    <i class="fas fa-minus"></i>
+                                                                </span>
+                                                            </button>
+
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -196,6 +222,8 @@
 
 <!-- script to handle tabbed content -->
 {% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 <script>
     $(document).ready(function () {
         $('#myTabs a').click(function (e) {
