--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -35,7 +35,7 @@
                         <option value="desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Descending</option>
                     </select>
                     <input type="hidden" name="q" value="{{ request.GET.q }}">
-                    <button type="submit" class="btn">Sort</button>
+                    <button type="submit" class="sort-button btn rounded-2 text-uppercase">Sort</button>
                 </div>
             </form>
         </div>
