update and remove bag items

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -15,7 +16,7 @@
     <div class="row">
         <div class="col-12 text-center">
             <h4 class="logo-font text-md mb-4 pt-3">Shopping Bag</h3>
-            <hr>
+                <hr>
         </div>
     </div>
 
@@ -46,11 +47,39 @@
                         <td class="py-3">
                             <p class="my-0">${{ item.product.price }}</p>
                         </td>
-                        <td class="py-3 w-25">
-                            <p class="my-0">{{ item.quantity }}</p>
-                        </td>
+
+                        <td class="py-3 w-25 text-center">
+                            <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
+                              {% csrf_token %}
+                              <div class="form-group">
+                                <div class="input-group d-flex justify-content-center">
+                                  <div class="input-group-prepend">
+                                    <button class="decrement-qty btn-sm btn rounded-2"
+                                      data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                      <span>
+                                        <i class="fas fa-minus fa-sm"></i>
+                                      </span>
+                                    </button>
+                                  </div>
+                                  <input class="form-control form-control-sm qty_input quantity-selector" type="number"
+                                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                    data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                  <div class="input-group-append">
+                                    <button class="increment-qty btn-sm btn rounded-2"
+                                      data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                      <span>
+                                        <i class="fas fa-plus fa-sm"></i>
+                                      </span>
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                            </form>
+                            <a class="update-link text-info"><small>Update</small></a>
+                            <a class="remove-item text-danger" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                          </td>
                         <td class="py-3">
-                            <p class="my-0">${{ item.product.price }}</p>
+                            <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
                     {% endfor %}
@@ -64,7 +93,8 @@
                     <tr>
                         <td colspan="5" class="text-right">
                             {% if request.META.HTTP_REFERER %}
-                            <a href="{{ request.META.HTTP_REFERER }}" class="rating-button btn rounded-2 text-uppercase">
+                            <a href="{{ request.META.HTTP_REFERER }}"
+                                class="rating-button btn rounded-2 text-uppercase">
                                 <span class="icon-pale pr-2">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
@@ -78,7 +108,7 @@
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             {% endif %}
-                            <a href="" class="rating-button btn rounded-2 text-uppercase m-2">
+                            <a href="" class="rating-button btn rounded-2 text-uppercase">
                                 <span class="text-uppercase pl-3">Secure Checkout</span>
                                 <span class="icon-pale pl-2 pr-3">
                                     <i class="fas fa-lock"></i>
@@ -89,16 +119,6 @@
                 </table>
             </div class='pb-5'>
             {% else %}
-            <!-- Return to previous page or default to all products if not available -->
-            {% if request.META.HTTP_REFERER %}
-            <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{{ request.META.HTTP_REFERER }}" class="rating-button btn rounded-2 text-uppercase">
-                <span class="icon-pale pr-2">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">Keep Shopping</span>
-            </a>
-            {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
             <a href="{% url 'products' %}" class="rating-button btn rounded-2 text-uppercase">
                 <span class="icon-pale pr-2">
@@ -107,8 +127,34 @@
                 <span class="text-uppercase">Keep Shopping</span>
             </a>
             {% endif %}
-            {% endif %}
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    });
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    });
+</script>
+
 {% endblock %}
