--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -88,14 +88,13 @@
                                                     <div class="row justify-content-between">
                                                         <div class="col-auto">
 
-                                                        <button
-                                                            class="increment-qty btn qty-button rounded-2"
-                                                            data-item_id="{{ product.id }}"
-                                                            id="increment-qty_{{ product.id }}">
-                                                            <span class="icon icon-pale">
-                                                                <i class="fas fa-plus"></i>
-                                                            </span>
-                                                        </button>
+                                                            <button class="increment-qty btn qty-button rounded-2"
+                                                                data-item_id="{{ product.id }}"
+                                                                id="increment-qty_{{ product.id }}">
+                                                                <span class="icon icon-pale">
+                                                                    <i class="fas fa-plus"></i>
+                                                                </span>
+                                                            </button>
 
 
                                                             <input class="form-control qty_input quantity-selector"
@@ -167,6 +166,16 @@
                                         <div class="card mb-3">
                                             <div class="card-body">
                                                 <p class="card-text">{{ review.comment }}</p>
+                                                {% if request.user == review.user %}
+                                                <div class="review-buttons">
+                                                    <form method="post" action="{% url 'delete_review' review.id %}"
+                                                        class="d-inline-block">
+                                                        {% csrf_token %}
+                                                        <button type="submit"
+                                                            class="btn btn-danger btn-sm">Delete</button>
+                                                    </form>
+                                                </div>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
@@ -177,7 +186,6 @@
                                 {% endif %}
                             </div>
                         </div>
-
                     </div>
 
                     <!-- post review tab -->
@@ -212,6 +220,8 @@
                             to submit a review.</p>
                         {% endif %}
                     </div>
+
+
                 </div>
             </div>
         </div>
