--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -96,12 +96,10 @@
                                                                 </span>
                                                             </button>
 
-
                                                             <input class="form-control qty_input quantity-selector"
                                                                 type="number" name="quantity" value="1" min="1" max="99"
                                                                 data-item_id="{{ product.id }}"
                                                                 id="id_qty_{{ product.id }}">
-
 
                                                             <button class="decrement-qty btn qty-button rounded-2"
                                                                 data-item_id="{{ product.id }}"
@@ -155,6 +153,7 @@
                     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                         <div class="col-12 p-0">
                             <div class="container-fluid p-0">
+
                                 {% if reviews %}
                                 {% for review in reviews %}
                                 <div class="review-card card prod-duct-card">
@@ -163,9 +162,28 @@
                                         <h5 class="card-title inline-block ml-auto">Rating: {{ review.rating }}</h5>
                                     </div>
                                     <div class="card-body">
-                                        <div class="card mb-3">
-                                            <div class="card-body">
-                                                <p class="card-text">{{ review.comment }}</p>
+                                        {% if not review.is_authorized %}
+                                        <p class="card-text text-muted">Review awaiting authorization</p>
+                                        {% if request.user.is_superuser or request.user.is_staff %}
+                                        <form method="post" action="{% url 'toggle_review_authorization' review.id %}"
+                                            class="d-inline-block">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-primary btn-sm">Authorize</button>
+                                        </form>
+
+                                        <p class="mt-3 card-text text-muted">{{ review.comment }}</p>
+                                                <div class="review-buttons">
+                                                    <form method="post" action="{% url 'delete_review' review.id %}"
+                                                        class="d-inline-block">
+                                                        {% csrf_token %}
+                                                        <button type="submit"
+                                                            class="btn btn-danger btn-sm">Delete</button>
+                                                    </form>
+                                                </div>
+
+                                        {% endif %}
+                                        {% else %}
+                                                <p class="card-text text-muted">{{ review.comment }}</p>
                                                 {% if request.user == review.user %}
                                                 <div class="review-buttons">
                                                     <form method="post" action="{% url 'delete_review' review.id %}"
@@ -176,8 +194,7 @@
                                                     </form>
                                                 </div>
                                                 {% endif %}
-                                            </div>
-                                        </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                                 {% endfor %}
