--- a/static/css/base.css
+++ b/static/css/base.css
@@ -403,6 +403,84 @@ tr.table-style .sku-text {
     font-size: xx-small !important;
 }
 
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 110px;
+    right: 35px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 3px;
+}
+
+.bg-toast-head {
+    background-color: #384D73;
+    min-width: 300px;
+}
+
+.bg-toast-body {
+    background-color: #F5F0EC;
+    min-width: 300px;
+}
+
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
+/* Convenience classes - colors copied from Bootstrap */
+.arrow-primary {
+    border-bottom-color: #007bff !important;
+}
+
+.arrow-secondary {
+    border-bottom-color: #6c757d !important;
+}
+
+.arrow-success {
+    border-bottom-color: #28a745 !important;
+}
+
+.arrow-danger {
+    border-bottom-color: #dc3545 !important;
+}
+
+.arrow-warning {
+    border-bottom-color: #ffc107 !important;
+}
+
+.arrow-info {
+    border-bottom-color: #17a2b8 !important;
+}
+
+.arrow-light {
+    border-bottom-color: #f8f9fa !important;
+}
+
+.arrow-dark {
+    border-bottom-color: #343a40 !important;
+}
+
+.bag-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 
 /* -------------------------------- Media Queries */
 
@@ -523,6 +601,22 @@ tr.table-style .sku-text {
 
     .review-tabs {
         padding: 47px 20px 220px 0;
+    }
+
+    .message-container {
+        position: fixed;
+        top: 70px;
+        right: 50%;
+        transform: translateX(50%);
+        z-index: 99999999999;
+    }
+    
+    .bg-toast-head {
+        min-width: 310px;
+    }
+    
+    .bg-toast-body {
+        min-width: 310px;
     }
 }
 
