--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,7 +14,7 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center hr-prod-spacer">
             <h4 class="logo-font text-md mb-4 pt-3">Shopping Bag</h3>
                 <hr>
         </div>
@@ -108,7 +108,7 @@
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             {% endif %}
-                            <a href="" class="rating-button btn rounded-2 text-uppercase">
+                            <a href="{% url 'checkout' %}" class="rating-button btn rounded-2 text-uppercase">
                                 <span class="text-uppercase pl-3">Secure Checkout</span>
                                 <span class="icon-pale pl-2 pr-3">
                                     <i class="fas fa-lock"></i>
