base stripe setup to handle payments

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col hr-prod-spacer">
                 <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
+                <h2 class="logo-font sub-header2-font mb-4">Checkout</h2>
                 <hr>
             </div>
         </div>
