--- a/templates/base.html
+++ b/templates/base.html
@@ -72,11 +72,11 @@
 
             <li class="nav-item dropdown">
               <a class="small-screen-menutext nav-link dropdown-toggle nav-link-padding caret-off" href="#"
-                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Connect
               </a>
               <div class="small-screen-droptext dropdown-menu dropmenu-Main dropdown-menu-end animate slideIn"
-                aria-labelledby="navbarDropdown">
+                aria-labelledby="navbarDropdown1">
                 <a href="" class="dropdown-item">About us</a>
                 <a href="" class="dropdown-item">Contact</a>
               </div>
@@ -84,11 +84,11 @@
 
             <li class="nav-item dropdown">
               <a class="small-screen-menutext nav-link dropdown-toggle nav-link-padding caret-off" href="#"
-                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 My Account
               </a>
               <div class="small-screen-droptext dropdown-menu dropmenu-Main dropdown-menu-end animate slideIn"
-                aria-labelledby="navbarDropdown">
+                aria-labelledby="navbarDropdown2">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="" class="dropdown-item">Manage Products</a>
