--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<div id="topnav" class="row bg-nav pt-lg-2 d-lg-none">
+<div id="topnav2" class="row bg-nav pt-lg-2 d-lg-none">
   <div class="col-12">
     <div class="row">
       <!-- Title -->
@@ -77,12 +77,12 @@
         <div class="col-12">
           <ul class="navbar-nav mob-nav-link-padding">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown3" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 My Account
               </a>
               <div class="dropdown-menu dropmenu-Mob dropdown-menu-end animate slideIn"
-                aria-labelledby="navbarDropdown">
+                aria-labelledby="navbarDropdown3">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="" class="dropdown-item">Manage Products</a>
@@ -97,7 +97,7 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown4" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Shop
               </a>
@@ -105,12 +105,12 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown5" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Connect
               </a>
               <div class="dropdown-menu dropmenu-Mob dropdown-menu-end animate slideIn"
-                aria-labelledby="navbarDropdown">
+                aria-labelledby="navbarDropdown5">
                 <a href="" class="dropdown-item">About us</a>
                 <a href="" class="dropdown-item">Contact</a>
               </div>
