--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,12 +4,12 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block inner_content %}
+<h1 class="mt-2 pt-2 mb-3 pt-2">{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        {{ form|crispy }}
+        <input class="rating-button btn rounded-2 text-uppercase" type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
