--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,7 +26,7 @@
                 </a>
                 {% else %}
                 <a>
-                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                    <img class="card-img-top img-fluid" src="https://placehold.co/512x512?text=No+Image" alt="{{ product.name }}">
                 </a>
                 {% endif %}
             </div>
