--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                 aria-labelledby="navbarDropdown2">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
-                <a href="" class="dropdown-item">Manage Products</a>
+                <a href="{% url 'add_product' %}" class="dropdown-item">Manage Products</a>
                 {% endif %}
                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
