add base contact form and model

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
               <div class="small-screen-droptext dropdown-menu dropmenu-Main dropdown-menu-end animate slideIn"
                 aria-labelledby="navbarDropdown1">
                 <a href="" class="dropdown-item">About us</a>
-                <a href="" class="dropdown-item">Contact</a>
+                <a href="{% url 'contact' %}" class="dropdown-item">Contact</a>
               </div>
             </li>
 
